# atcoder-random-picker

./: .gitconfig  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  contact.md  feature_request.md
.github/workflows/: Backend.ci.yml  backend.deploy.yml  fetch.json.yml  json.fetch.yml  rust.yml
backend/: Cargo.toml  Dockerfile  fly.toml
backend/.github/workflows/: ci.yml
backend/data/: json_fetch.mjs  problem-models.json  problems.json
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/data/: problem-models.json  problems.json
backend/src/routing/: mod.rs
backend/src/utils/: api.rs  mod.rs  ratelimiter.rs  routing.rs
backend/tests/: api_test.rs  data_test.rs  routing_test.rs
frontend/: .env  .env.development  .env.example  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.svelte  app.css  cacher.ts  input.css  main.ts  memorizer.ts  output.css  style.css  vite-env.d.ts
frontend/src/components/: Accordion.svelte  AdSenseUnit.svelte  Button.svelte  Dialog.svelte  Message.svelte  PickHistory.svelte  SavedProblems.svelte
frontend/src/lib/: Input.svelte  Label.svelte  Message.svelte
frontend/src/utils/: cacher.ts  types.ts
frontend/tests/: cacher.test.ts
