[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
http = "1.3.1"
chrono = "0.4.41"
url = "2.2"
rand = "0.8"
serde = { "version" = "1.0", features = ["derive"] }
reqwest = "0.12.23"
serde_json = "1.0.142"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
